src/objects/DTC_Point_of_Contact__c 2.object
<CustomObject>
    <label>Point of Contact</label>
    <nameField>
        <label>Point of Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Points of Contact</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>DTC_Application__c</fullName>
        <label>DTC Application</label>
        <referenceTo>DTC_Application__c</referenceTo>
        <relationshipLabel>Points of Contact</relationshipLabel>
        <relationshipName>Points_of_Contact</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Notes_Additional_Info__c</fullName>
        <label>Notes/Additional Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Sustainment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>DTC</fullName>
        <active>true</active>
        <label>DTC</label>
    </recordTypes>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>